--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .acc-bt {
+    @apply overflow-hidden rounded-xl
+    bg-slate-800/60 px-4 py-3 text-xl
+    font-bold tracking-wider text-slate-900/80 backdrop-blur hover:scale-105 hover:border-blue-400 hover:bg-slate-900/80 hover:text-slate-300/70
+    focus:border-blue-400 focus:outline-none focus:ring focus:ring-blue-300 active:scale-90;
+  }
+}
