--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,6 +46,8 @@ body {
   background: url("/images/header.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
+  
   -o-background-size: cover;
   background-size: cover;
+  backdrop-filter: blur(90px);
 }
