button color change & bottom music placement

--- a/src/styles/music.scss
+++ b/src/styles/music.scss
@@ -1,4 +1,4 @@
-$rhap_theme-color: #ff00d3 !default;
+$rhap_theme-color:  #3f00e7 !default; //
 $rhap_background-color: "red"; //hsl(var(--b3) / var(--tw-bg-opacity)) !default;
 $rhap_bar-color: #272020 !default;
 $rhap_time-color: #272020 !default;
