--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
   @tailwind utilities;
 
   @layer base {
-    :root {
+    :root, .light {
       --background: 0 0% 100%;
       --foreground: 222.2 84% 4.9%;
 
@@ -72,5 +72,6 @@
     }
     body {
       @apply bg-background text-foreground;
+    
     }
   }
