--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,7 +76,7 @@
   }
 }
 
-#ih {
+#ihx {
   background: url("/images/guitar.svg");
   background-size: 10%;
   animation: pan 135s linear infinite;
