--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -157,3 +157,16 @@ body {
     background-position: 100% 0%;
   }
 }
+
+@keyframes scrolling-text {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+/* .animate-scrolling-text {
+  animation: scrolling-text 20s linear infinite;
+} */
