--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -147,6 +147,95 @@ body {
   background-size: 10%;
   animation: pan 135s linear infinite;
 }
+.christmas-lights {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.light-string {
+  position: absolute;
+  top: 0;
+  left: -50px;
+  right: -50px;
+  display: flex;
+  justify-content: space-between;
+}
+.light-string2 {
+  position: absolute;
+  top: 0;
+  left: -50px;
+  right: -50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.light-segment {
+  position: relative;
+  width: 200px;
+  height: 40px;
+  display: flex;
+  align-items: flex-start;
+}
+.light-segment2 {
+  position: relative;
+  width: 200px;
+  height: 40px;
+  display: flex;
+  align-items: flex-start;
+}
+.wire {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background: #000;
+}
+.wire2 {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background: #000;
+}
+
+.bulb {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  transform: translateX(-50%);
+
+  animation: glow 1.5s ease-in-out infinite alternate;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+}
+.bulb2 {
+  position: absolute;
+  bottom: 18px;
+  right: 80%;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  transform: translateX(-50%);
+
+  animation: glow 1.5s ease-in-out infinite alternate;
+  box-shadow: 0 0 10px rgba(185, 241, 171, 0.7);
+}
+
+@keyframes glow {
+  from {
+    opacity: 0.7;
+    box-shadow: 0 0 10px rgba(185, 241, 171, 0.7);
+  }
+  to {
+    opacity: 1;
+    box-shadow: 0 0 20px rgba(121, 72, 72, 0.9);
+  }
+}
 
 @keyframes pan {
   0% {
